photometry card bug fix and debugging works again now

--- a/app/host/templates/host/photometry_card.html
+++ b/app/host/templates/host/photometry_card.html
@@ -6,10 +6,10 @@
 <h4>Aperture Photometry</h4>
 <ul class="nav nav-tabs card-header-tabs" id="myTab" role="tablist">
     <li class="nav-item" role="presentation">
-        <button class="nav-link active" id="global-tab" data-bs-toggle="tab" data-bs-target="#global" type="button" role="tab" aria-controls="global" aria-selected="false">Global</button>
+        <button class="nav-link active" id="global-tab" data-toggle="tab" data-target="#global" type="button" role="tab" aria-controls="global" aria-selected="false">Global</button>
     </li>
     <li class="nav-item" role="presentation">
-        <button class="nav-link" id="local-tab" data-bs-toggle="tab" data-bs-target="#local" type="button" role="tab" aria-controls="home" aria-selected="true">Local</button>
+        <button class="nav-link" id="local-tab" data-toggle="tab" data-target="#local" type="button" role="tab" aria-controls="home" aria-selected="true">Local</button>
     </li>
 </ul>
 {% endblock %}
