save and report the full range of prospector-alpha parameters

--- a/app/host/templates/host/base.html
+++ b/app/host/templates/host/base.html
@@ -1,3 +1,4 @@
+{% load latexify %}
 <!DOCTYPE html>
 <html lang="en">
 
@@ -70,6 +71,8 @@
   }
   </style>
   {% load static %}
+  {% include 'latexify/stylesheets.html' %}
+
   <link rel="shortcut icon" type="image/png" href="{% static 'images/favicon.png' %}" >
 </head>
 
