--- a/app/host/templates/host/results.html
+++ b/app/host/templates/host/results.html
@@ -1,4 +1,5 @@
 {% extends 'host/base.html' %}
+{% load latexify %}
 
 {% block title %} Results {% endblock %}
 {% block script %} {{ bokeh_cutout_script | safe }} {{ bokeh_sed_local_script | safe }} {{ bokeh_sed_global_script | safe }}  {% endblock %}
